[metadata]
name = numbert
author = Daniel Weitekamp
author-email = weitekamp@cmu.edu
summary = A simple expert system implemented in Numba.
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
home-page = https://github.com/DannyWeitekamp/numbert
project_urls = 
    Documentation = https://github.com/DannyWeitekamp/numbert
    Source Code = https://github.com/DannyWeitekamp/numbert 
license = MIT
license_file = LICENSE.txt
classifier = 
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence
keywords = "expert system production rules"

[files]
packages =
    numbert

[bdist_wheel]
universal=1

[aliases]
test=pytest
